Ui impementation done

--- a/practicle-assignment/styles/_variables.scss
+++ b/practicle-assignment/styles/_variables.scss
@@ -3,7 +3,13 @@ $Roboto: 'Roboto', sans-serif;
 $Violet-one: #9509EE;
 $White-one: #ffffff;
 $White-two: #F4F5FA;
+$White-three: #F4F5FA;
 $Text-one: #111111;
+$LightGreen-one: #AADB1F;
+$Grey-one: #F0F0F0;
+$ErrorColor:#ff3333;
+
+
 $Mobile: "only screen and (max-width: 768px)";
 $SmallLaptops : "only screen and (min-width: 769px) and (max-width: 1024px)";
 $bigScreens : "only screen and (min-width: 1500px)";
