--- a/practicle-assignment/styles/style.scss
+++ b/practicle-assignment/styles/style.scss
@@ -8,4 +8,8 @@
 @import "shared-components/_rondedButton";
 @import "shared-components/_employeeManagement";
 @import "shared-components/_employeeCard";
+@import "shared-components/_tableView";
+@import "shared-components/_addEmployee";
+@import "shared-components/_inputController";
+@import "shared-components/_borderButtons";
 
