delete and edit ep added

--- a/practicle-assignment/styles/style.scss
+++ b/practicle-assignment/styles/style.scss
@@ -12,4 +12,5 @@
 @import "shared-components/_addEmployee";
 @import "shared-components/_inputController";
 @import "shared-components/_borderButtons";
+@import "shared-components/_toaster";
 
