--- a/practicle-assignment/styles/shared-components/__inputController.scss
+++ b/practicle-assignment/styles/shared-components/__inputController.scss
@@ -46,8 +46,8 @@
       width: 90%;
       height: 40px;
       background: $Grey-one;
-      border: $White-one;
-      border-bottom: 1px solid $Text-one;
+      border: 1px solid $ErrorColor;
+      //border-bottom: 1px solid $Text-one;
       color: rgba(17, 17, 17, 0.48);
       display: flex;
       align-items: center;
